Change history title to Japanese

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="history-container">
-        <div class="history-title">Current Session Tags</div>
+        <div class="history-title">インスタンス履歴</div>
         <div id="historyList"></div>
     </div>
 
