Rename edit button text to 'NAME EDIT'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
     <div class="header">
         <button id="startBtn" class="top-btn" onclick="startSession()">START REC</button>
-        <button id="editBtn" class="top-btn" onclick="toggleEditMode()">EDIT</button>
+        <button id="editBtn" class="top-btn" onclick="toggleEditMode()">NAME EDIT</button>
         <button id="soundBtn" class="top-btn active" onclick="toggleSound()">🔊</button>
     </div>
     
